[package]
name        = "z3-quantum-flow"
version     = "0.3.0"
edition     = "2021"
authors     = ["modhalaali"]
description = "Z3 Quantum Flow — Literally Zero-Copy AI Inference Engine"
license     = "MIT"

[lib]
name = "z3_quantum_flow"
path = "src/lib.rs"

[[bin]]
name = "qflow"
path = "src/main.rs"

[[bin]]
name = "qflow-server"
path = "src/bin/z1-server.rs"

[dependencies]
libc        = "0.2"
anyhow      = "1.0"
log         = "0.4"
env_logger  = "0.11"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
rand        = "0.8"
thiserror   = "1.0"
memmap2     = "0.9"
tiny_http   = "0.12.0"

[build-dependencies]
cc = "1.0"

[profile.release]
opt-level       = 3
lto             = true
codegen-units   = 1
panic           = "abort"
